# PolyOps

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PERFORMANCE_PLAN.md  PLAN.md  README.md  RELEASE_PLAN.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
crates/polyops/: Cargo.toml
crates/polyops-napi/: Cargo.toml  README.md  flat.d.ts  flat.js  flat.mjs  index.d.ts  index.js  package-lock.json  package.json  polyops.d.ts  polyops.js  polyops.mjs
crates/polyops-napi/__test__/: esm.test.mjs  flat.test.mjs  smoke.test.mjs
crates/polyops-napi/npm/darwin-arm64/: README.md  package.json
crates/polyops-napi/npm/darwin-x64/: README.md  package.json
crates/polyops-napi/npm/linux-arm64-gnu/: README.md  package.json
crates/polyops-napi/npm/linux-arm64-musl/: README.md  package.json
crates/polyops-napi/npm/linux-x64-gnu/: README.md  package.json
crates/polyops-napi/npm/linux-x64-musl/: README.md  package.json
crates/polyops-napi/npm/win32-x64-msvc/: README.md  package.json
crates/polyops-napi/src/: lib.rs
crates/polyops/benches/: benchmarks.rs
crates/polyops/benches/fixtures/: README.md  clip_path_flatten.json
crates/polyops/src/: compare_events.rs  compare_segments.rs  compute_fields.rs  connect_edges.rs  contour.rs  divide_segment.rs  edge_type.rs  equals.rs  event_queue.rs  fill_queue.rs  geo_compat.rs  lib.rs  operation.rs  possible_intersection.rs  segment_intersection.rs  signed_area.rs  subdivide_segments.rs  sweep_event.rs  sweep_line.rs  types.rs
crates/polyops/tests/: geo_types.rs  parity.rs  serde.rs  smoke.rs
crates/polyops/tests/goldens/difference/: basic1_poly.json  fatal1.json  fatal2.json  featureTypes_multiPolyToClipping.json  featureTypes_multiPolyWithHoleToClipping.json  featureTypes_polyWithHoleToClipping.json  hourglasses.json  hourglasses__ba.json  issue124.json  issue68.json  issue69.json  issue76.json  nested_polys1.json  nested_polys2.json  overlap_loop.json  overlap_y.json  polygon_trapezoid_edge_overlap.json  touching_boxes.json
crates/polyops/tests/goldens/intersection/: basic1_poly.json  basic3_multi_poly.json  collapsed_edges_removed.json  fatal1.json  fatal2.json  fatal3.json  fatal4.json  featureTypes_multiPolyWithHoleToClipping.json  featureTypes_polyWithHoleToClipping.json  hourglasses.json  issue76.json  issue93.json  issue96.json  overlap_loop.json  overlap_y.json  polygon_trapezoid_edge_overlap.json  tie.json  touching_boxes.json
crates/polyops/tests/goldens/union/: checkerboard1.json  closed_loop1.json  disjoint_boxes.json  disjoint_union_nesting.json  fatal1.json  fatal2.json  fatal3.json  fatal4.json  featureTypes_multiPolyToClipping.json  featureTypes_multiPolyWithHoleToClipping.json  featureTypes_polyToClipping.json  featureTypes_polyWithHoleToClipping.json  filling_rectangle.json  hourglasses.json  intersections_at_endpoints.json  issue103.json  issue69_sub1.json  issue71.json  issue76.json  nested_polys3.json  overlap_loop.json  overlap_y.json  overlapping_segments2.json  overlapping_segments3.json  polygon_trapezoid_edge_overlap.json  tie.json  touching_boxes.json
crates/polyops/tests/goldens/xor/: basic1_poly.json  collinear_segments1.json  daef_polygonwithholes_holed.json  featureTypes_multiPolyToClipping.json  featureTypes_multiPolyWithHoleToClipping.json  featureTypes_polyWithHoleToClipping.json  hourglasses.json  overlapping_segments1.json
parity/: README.md  bench.ts  copy-bench-fixtures.ts  generate-goldens.ts  package.json  tsconfig.json  verify-flat.ts  verify-via-napi.ts
scripts/: README.md  spin-polyops-apps.mjs
