[workspace]
members = [
    "crates/polyops",
    "crates/polyops-napi",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Samuel Opeyemi <samuel@fasteditor.com>"]
repository = "https://github.com/trenchesdeveloper/PolyOps"
homepage = "https://github.com/trenchesdeveloper/PolyOps"

[workspace.dependencies]
# Robust adaptive predicates — matches the JS robust-predicates dep in upstream.
robust = "1.1"
# Serde + GeoJSON I/O at the napi boundary; the core crate stays serde-free.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
