[package]
name = "polyops-napi"
description = "Node.js bindings for the polyops polygon-clipping crate."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
# rlib is included so `cargo test --workspace` can link against the
# crate on platforms where the napi cdylib link step requires Node
# (notably Windows). napi build / napi prepublish still produce the
# cdylib artifact that ships to npm.
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi6"] }
napi-derive = "2.16"
polyops = { path = "../polyops", version = "0.0.5" }

[build-dependencies]
napi-build = "2.1"
